add AIService
