# src/AterStudio/ClientApp/src/app/services/advance/models/streaming-chat-message-content.model.ts
@@ -1,0 +1,10 @@
+import { AuthorRole } from '../../models/author-role.model';
+export interface StreamingChatMessageContent {
+  choiceIndex: number;
+  modelId?: string | null;
+  metadata?: any | null;
+  content?: string | null;
+  authorName?: string | null;
+  role?: AuthorRole | null;
+
+}
