# src/AterStudio/ClientApp/src/app/services/models/author-role.model.ts
@@ -1,0 +1,4 @@
+export interface AuthorRole {
+  label: string;
+
+}
