# src/AterStudio/swagger.json
@@ -98,20 +98,51 @@
             "content": {
               "text/plain": {
                 "schema": {
-                  "type": "string"
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/StreamingChatMessageContent"
+                  }
                 }
               },
               "application/json": {
                 "schema": {
-                  "type": "string"
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/StreamingChatMessageContent"
+                  }
                 }
               },
               "text/json": {
                 "schema": {
-                  "type": "string"
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/StreamingChatMessageContent"
+                  }
                 }
               }
             }
+          }
+        }
+      }
+    },
+    "/api/Advance/test1": {
+      "get": {
+        "tags": [
+          "Advance"
+        ],
+        "operationId": "Advance_Test1",
+        "parameters": [
+          {
+            "name": "str",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success"
           }
         }
       }
@@ -1766,6 +1797,15 @@
         },
         "additionalProperties": false
       },
+      "AuthorRole": {
+        "type": "object",
+        "properties": {
+          "label": {
+            "type": "string"
+          }
+        },
+        "additionalProperties": false
+      },
       "BatchGenerateDto": {
         "type": "object",
         "properties": {
@@ -2706,6 +2746,39 @@
           "Node"
         ],
         "x-enumData": [ ]
+      },
+      "StreamingChatMessageContent": {
+        "type": "object",
+        "properties": {
+          "choiceIndex": {
+            "type": "integer",
+            "format": "int32",
+            "readOnly": true
+          },
+          "modelId": {
+            "type": "string",
+            "nullable": true,
+            "readOnly": true
+          },
+          "metadata": {
+            "type": "object",
+            "additionalProperties": { },
+            "nullable": true,
+            "readOnly": true
+          },
+          "content": {
+            "type": "string",
+            "nullable": true
+          },
+          "authorName": {
+            "type": "string",
+            "nullable": true
+          },
+          "role": {
+            "$ref": "#/components/schemas/AuthorRole"
+          }
+        },
+        "additionalProperties": false
       },
       "SubProjectInfo": {
         "type": "object",
